# introduction_copilot

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: conan.cmake
doc/: ai-assisted-coding.html  ai-assisted-coding.md
src/: main.cpp  settings.cpp  settings.h
